# tfbind

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
configs/: base.yml  path.yml
nb/: PART1.ipynb  PART2-Combined-Data copy.ipynb  PART3.ipynb
scripts/: training_model.py
src/: loader.py  model.py  processing.py  training.py
src/utils/: paths.py
tests/: test_paths.py
tfbind/: __init__.py  loader.py  model.py  processing.py  training.py
tfbind/utils/: __init__.py  helper.py
