[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tfbind"
version = "0.1.0"
description = "Deep learning applications for TF binding to DNA"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
dependencies = [
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=24.0",
    "isort>=5.0",
    "pre-/Users/tungvuduc/Desktop/PhD/projects/repos/quantselect/quantselect/.pre-commit-config.yaml>=3.0",
]

[tool.setuptools]
packages = ["tfbind"]

[tool.black]
line-length = 100
target-version = ['py312']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 100
skip_gitignore = true
known_third_party = ["torch", "jax", "flax", "transformers", "numpy", "pandas", "sklearn"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
